--- a/style.css
+++ b/style.css
@@ -21,9 +21,10 @@ body{
 /* home style start */
 #home{
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-start;
     background-color: white;
+    flex-direction: column;
     grid-area: home;
     width: 100vw;
     height: 100%;
@@ -39,13 +40,14 @@ body{
     user-select: none;
     -webkit-user-select: none;
 }
-#home > button:hover{
+#home > button:hover, #home > button[musiced="true"]{
     background-color: rgba(0, 0, 0, 0.2);
 }
 #home > button:active{
     color: black;
     background-color: rgba(0, 0, 0, 0.4);
 }
+
 /* home style end */
 /* control style start */
 #control{
@@ -93,7 +95,7 @@ body{
     border: 0px;
     border-radius: 12pt;
     font-size: 20px;
-    color: black;
+    color: white;
 }
 #setting[class="settingStart"] > div > button:hover{
     background-color: rgba(0,0,0,0.2);
@@ -128,6 +130,7 @@ body{
         border-radius: 30px;
     }
 }
+/* macOS Windows and Linux screen end */
 
 /* dark color */
 @media (prefers-color-scheme: dark) {
