--- a/style.css
+++ b/style.css
@@ -2,15 +2,14 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    border-radius: 24pt;
 
     transition: 0.3s background-color linear;
-}
-html{
-    --img-border-radius: 30px;
 }
 body{
     display: grid;
     min-height: 100vh;
+    min-width: 100%;
     grid-template-areas: 'home' 'control';
     grid-template-rows: calc(100% - 100px);
     background-color: gray;
@@ -26,13 +25,13 @@ body{
     background-color: white;
     flex-direction: column;
     grid-area: home;
-    width: 100vw;
+    width: 100%;
     height: 100%;
+    border-radius: 0px 0pt 24pt 24pt;
 }
 #home > button{
     background-color: transparent;
     border: 0px;
-    border-radius:18pt;
     color: black;
     font-size: 32px;
     padding: 10px;
@@ -64,6 +63,9 @@ body{
     user-select: none;
     -webkit-user-select: none;
 }
+#control > * > img, #control > img{
+    background-color: gray;
+}
 
 #control_music{
     display: flex;
@@ -77,23 +79,23 @@ body{
     transition: 0.5s all cubic-bezier(0.50,0.50,0.00,1.30);
     align-items: center;
     justify-content: center;
-    border-radius: 24pt;
     min-width: 100px;
     min-height: 100px;
 }
 #setting[class="settingStart"]{
     background-color: gray;
-    min-width: 400px;
-    min-height: 500px;
-    transform: translate(0px, -330px);
-    -webkit-transform: translate(0px, -330px);
+
+    width: auto;
+    height: auto;
+
+    margin-bottom: 220px;
+    margin-right: 10px;
 }
 #setting[class="settingStart"] > div > button{
     background-color: transparent;
     width: 100px;
     height: 100px;
     border: 0px;
-    border-radius: 12pt;
     font-size: 20px;
     color: white;
 }
@@ -113,21 +115,18 @@ body{
     #home > button{
         font-size: 20px;
         margin: 10px 0px;
-        border-radius: 15px;
     }
 }
 @media (min-width: 373px){
     #home > button{
         font-size: 30px;
         margin: 20px 0px;
-        border-radius: 20px;
     }
 }
 @media (min-width: 645px){
     #home > button{
         font-size: 50px;
         margin: 20px 0px;
-        border-radius: 30px;
     }
 }
 /* macOS Windows and Linux screen end */
@@ -150,6 +149,9 @@ body{
     }
 
     #control{
+        background-color: black;
+    }
+    #control > * > img, #control > img{
         background-color: black;
     }
 
