--- a/style.css
+++ b/style.css
@@ -75,10 +75,9 @@ body{
     height: 100%;
 }
 #setting{
-    display: flex;
+    display: grid;
+    grid-template-areas: 'reload' 'volume';
     transition: 0.5s all cubic-bezier(0.50,0.50,0.00,1.30);
-    align-items: center;
-    justify-content: center;
     min-width: 100px;
     min-height: 100px;
 }
@@ -87,15 +86,15 @@ body{
 
     width: auto;
     height: auto;
+    padding: 20px;
 
-    margin-bottom: 220px;
+    margin-bottom: 100%;
     margin-right: 10px;
 }
 #setting[class="settingStart"] > div > button{
     background-color: transparent;
     width: 100px;
     height: 100px;
-    border: 0px;
     font-size: 20px;
     color: white;
 }
@@ -104,6 +103,45 @@ body{
 }
 #setting[class="settingStart"] > div > button:active{
     background-color: rgba(0, 0, 0, 0.4);
+}
+#setting[class="settingStart"] > div > *{
+    border: 2px solid rgba(255,255,255,0.5);
+}
+
+#volume{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: rgb(100,100,100);
+    width: 100px;
+    height: 50px;
+    margin-left: -20px;
+    margin-top: 30px;
+    overflow: hidden;
+
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    grid-area: volume;
+}
+#volume::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 10%;
+    height: 50px;
+    background-color: rgb(0, 0, 0);
+}
+/* moz */
+#volume::-moz-range-thumb{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 10%;
+    height: 50px;
+    background-color: rgb(0, 0, 0);
+}
+#volume::-moz-range-progress{
+    background-color: rgb(0, 0, 0);
 }
 /* control style end */
 
