--- a/style.css
+++ b/style.css
@@ -5,16 +5,17 @@
     border-radius: 24pt;
 
     transition: 0.3s background-color linear;
+    
+    outline: none;
 }
 body{
-    display: grid;
+    display: flex;
     min-height: 100vh;
     min-width: 100%;
-    grid-template-areas: 'home' 'control';
-    grid-template-rows: calc(100% - 100px);
     background-color: gray;
+    flex-direction: column;
 
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 /* home style start */
@@ -26,7 +27,7 @@ body{
     flex-direction: column;
     grid-area: home;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 100px);
     border-radius: 0px 0pt 24pt 24pt;
 }
 #home > button{
@@ -55,7 +56,6 @@ body{
     display: flex;
     align-items: center;
     background-color: gray;
-    grid-area: control;
     width: 100vw;
     height: 100px;
 }
@@ -74,6 +74,7 @@ body{
     width: 100%;
     height: 100%;
 }
+/* control setting element */
 #setting{
     display: grid;
     grid-template-areas: 'reload' 'volume';
@@ -81,14 +82,16 @@ body{
     min-width: 100px;
     min-height: 100px;
 }
+/* setting starting.  set style(if class yes or no and settingStart) */
 #setting[class="settingStart"]{
     background-color: gray;
+    border: 1px solid white;
 
     width: auto;
     height: auto;
     padding: 20px;
 
-    margin-bottom: 100%;
+    margin-bottom: calc(100px + 110px);
     margin-right: 10px;
 }
 #setting[class="settingStart"] > div > button{
@@ -96,7 +99,9 @@ body{
     width: 100px;
     height: 100px;
     font-size: 20px;
-    color: white;
+}
+#setting[class="settingStart"] > div > *{
+	color: white;
 }
 #setting[class="settingStart"] > div > button:hover{
     background-color: rgba(0,0,0,0.2);
@@ -107,7 +112,7 @@ body{
 #setting[class="settingStart"] > div > *{
     border: 2px solid rgba(255,255,255,0.5);
 }
-
+/* setting volume style */
 #volume{
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -115,33 +120,33 @@ body{
     background-color: rgb(100,100,100);
     width: 100px;
     height: 50px;
-    margin-left: -20px;
-    margin-top: 30px;
     overflow: hidden;
+    margin-top: 10px;
 
-    transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
     grid-area: volume;
 }
 #volume::-webkit-slider-thumb{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 10%;
+    width: 0px;
     height: 50px;
     background-color: rgb(0, 0, 0);
+    box-shadow: -100vw 50vh 0px 100vw black;
 }
 /* moz */
 #volume::-moz-range-thumb{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 10%;
+    width: 0px;
     height: 50px;
     background-color: rgb(0, 0, 0);
+    box-shadow: -100vw 50vh 0px 100vw black;
 }
 #volume::-moz-range-progress{
     background-color: rgb(0, 0, 0);
+    box-shadow: -100vw 50vh 0px 100vw black;
 }
 /* control style end */
 
