--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ body{
     -moz-appearance: none;
     appearance: none;
     width: 0px;
-    height: 50px;
+    height: 50vh;
     background-color: rgb(0, 0, 0);
     box-shadow: -100vw 50vh 0px 100vw black;
 }
@@ -154,7 +154,7 @@ body{
     -moz-appearance: none;
     appearance: none;
     width: 0px;
-    height: 50px;
+    height: 50vh;
     background-color: rgb(0, 0, 0);
     box-shadow: -100vw 50vh 0px 100vw black;
 }
