--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ body{
     z-index: 10;
 }
 #control > * > img, #control > img{
-    background-color: gray;
     vertical-align: bottom;
 }
 
@@ -97,7 +96,9 @@ body{
     --max-button: 2;
     --max-margin: 3;
   
-    background-color: gray;
+    background-color: rgba(100,100,100,0.5);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border: 1px solid white;
 
     width: auto;
@@ -168,7 +169,7 @@ body{
 
 
 /* screen size */
-@media screen and (min-width: 200px){
+@media screen and (min-width: 200px), screen and (max-width: 0px){
     #home > button{
         font-size: 10px;
         margin: 5px 0px;
@@ -238,16 +239,13 @@ body{
     #control{
         background-color: black;
     }
-    #control > * > img, #control > img{
-        background-color: black;
-    }
 
     body{
         background-color: black;
     }
     
     #setting[class="settingStart"]{
-        background-color: rgb(30,30,30);
+        background-color: rgba(30,30,30,0.5);
     }
     #setting[class="settingStart"] > div > button{
         color: white;
