--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, 'SmileySans', Sans-Serif;
+    font-weight: 500;
     border-radius: 24pt;
 
     transition: 0.3s all cubic-bezier(0.50,0.50,0.00,1.30);
