--- a/style.css
+++ b/style.css
@@ -1,202 +1,206 @@
 @font-face {
-    font-family: 'SmileySans';
-    src: url('./SmileySans.ttf');
+  font-family: 'SmileySans';
+  src: url('./SmileySans.ttf');
 }
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, 'SmileySans', Sans-Serif;
-    font-weight: 500;
-    border-radius: 24pt;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, 'SmileySans', Sans-Serif;
+  font-weight: 500;
+  border-radius: 24pt;
 
-    transition: 0.3s all cubic-bezier(0.50,0.50,0.00,1.30);
+  transition: 0.3s all cubic-bezier(0.50,0.50,0.00,1.30);
 
-    outline: none;
+  outline: none;
 }
 html {
-    overflow: hidden;
-    position: fixed;
+  overflow: hidden;
+  position: fixed;
 }
 body {
-    display: flex;
-    min-height: 100vh;
-    min-width: 100%;
-    background-color: gray;
-    flex-direction: column;
+  display: flex;
+  min-height: 100vh;
+  min-width: 100%;
+  background-color: gray;
+  flex-direction: column;
 }
 
 /* home style start */
+p {
+  user-select: none;
+  -webkit-user-select: none;
+}
 #home {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: white;
-    flex-direction: column;
-    grid-area: home;
-    width: 100%;
-    height: calc(100vh - 100px);
-    border-radius: 0px 0pt 24pt 24pt;
-    overflow-x: hidden;
-    overflow-y: auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: white;
+  flex-direction: column;
+  grid-area: home;
+  width: 100%;
+  height: calc(100vh - 100px);
+  border-radius: 0px 0pt 24pt 24pt;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 #home > * {
-    flex-shrink: 0;
+  flex-shrink: 0;
 }
 #home > button {
-    background-color: transparent;
-    border: 0px;
-    color: black;
-    font-size: 32px;
-    padding: 10px;
-    margin: 5px 0px;
-    user-select: none;
-    -webkit-user-select: none;
+  background-color: transparent;
+  border: 0px;
+  color: black;
+  font-size: 32px;
+  padding: 10px;
+  margin: 5px 0px;
+  user-select: none;
+  -webkit-user-select: none;
 }
 #home > button:hover, #home > button[musiced="true"] {
-    background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 #home > button:active {
-    color: black;
-    background-color: rgba(0, 0, 0, 0.4);
+  color: black;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* home style end */
 /* control style start */
 #control {
-    --img-size: 1.0;
+  --img-size: 1.0;
 
-    display: flex;
-    align-items: center;
-    background-color: gray;
-    width: 100vw;
-    height: 100px;
-    border-top: 1px solid white;
+  display: flex;
+  align-items: center;
+  background-color: gray;
+  width: 100vw;
+  height: 100px;
+  border-top: 1px solid white;
 }
 #control > * {
-    user-select: none;
-    -webkit-user-select: none;
-    z-index: 10;
+  user-select: none;
+  -webkit-user-select: none;
+  z-index: 10;
 }
 #control > * > img, #control > img {
-    vertical-align: bottom;
+  vertical-align: bottom;
 }
 
 #control_music {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 /* control setting element */
 #setting {
-    display: grid;
-    grid-template-areas: 'reload downloadMusic' 'volume';
-    width: 100px;
-    height: 100px;
-    z-index: 100;
+  display: grid;
+  grid-template-areas: 'reload downloadMusic' 'volume';
+  width: 100px;
+  height: 100px;
+  z-index: 100;
 }
 /* setting starting.  set style(if class yes or no and settingStart) */
 #setting[class="settingStart"] {
-    --max-button: 2;
-    --max-margin: 3;
-    position: absolute;
-    right: 10px;
+  --max-button: 2;
+  --max-margin: 3;
+  position: absolute;
+  right: 10px;
 
-    background-color: rgba(100,100,100,0.5);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid white;
+  background-color: rgba(100,100,100,0.5);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid white;
 
-    width: auto;
-    min-width: calc((100px * var(--max-button)) + (10px * var(--max-margin)));
-    max-width: calc((100px * var(--max-button)) + (10px * var(--max-margin)));
-    height: auto;
-    padding: 20px;
+  width: auto;
+  min-width: calc((100px * var(--max-button)) + (10px * var(--max-margin)));
+  max-width: calc((100px * var(--max-button)) + (10px * var(--max-margin)));
+  height: auto;
+  padding: 20px;
 
-    transform: translateY(-170px);
+  transform: translateY(-170px);
 }
 #setting[class="settingStart"] > div > button {
-    background-color: transparent;
-    width: 100px;
-    height: 100px;
-    font-size: 20px;
+  background-color: transparent;
+  width: 100px;
+  height: 100px;
+  font-size: 20px;
 }
 #setting[class="settingStart"] > div > * {
-    color: white;
+  color: white;
 }
 #setting[class="settingStart"] > div > button:hover {
-    background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0,0.2);
 }
 #setting[class="settingStart"] > div > button:active {
-    background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 #setting[class="settingStart"] > div > * {
-    border: 2px solid rgba(255,255,255,0.5);
+  border: 2px solid rgba(255,255,255,0.5);
 }
 /* setting volume style */
 #volume {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: rgb(100,100,100);
-    width: 100px;
-    height: 40px;
-    overflow: hidden;
-    margin-top: 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: rgb(100,100,100);
+  width: 100px;
+  height: 40px;
+  overflow: hidden;
+  margin-top: 10px;
 
-    grid-area: volume;
+  grid-area: volume;
 }
 #volume::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 0px;
-    height: 50vh;
-    background-color: rgb(0, 0, 0);
-    box-shadow: -100vw 50vh 0px 100vw black;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 0px;
+  height: 50vh;
+  background-color: rgb(0, 0, 0);
+  box-shadow: -100vw 50vh 0px 100vw black;
 }
 /* moz */
 #volume::-moz-range-thumb {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 0px;
-    height: 50vh;
-    background-color: rgb(0, 0, 0);
-    box-shadow: -100vw 50vh 0px 100vw black;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 0px;
+  height: 50vh;
+  background-color: rgb(0, 0, 0);
+  box-shadow: -100vw 50vh 0px 100vw black;
 }
 #volume::-moz-range-progress {
-    background-color: rgb(0, 0, 0);
-    box-shadow: -100vw 50vh 0px 100vw black;
+  background-color: rgb(0, 0, 0);
+  box-shadow: -100vw 50vh 0px 100vw black;
 }
 ul > li {
-    list-style: none;
+  list-style: none;
 }
 #fButton + ul {
-    display: none;
-    margin-left: 5px;
+  display: none;
+  margin-left: 5px;
 }
 #fButton + ul > li {
-    margin: 3px;
+  margin: 3px;
 }
 #fButton {
-    margin-left: 5px;
-    border: 0px;
-    background-color: white;
-    font-size: 20px;
-    color: black;
-    padding: 5px;
-    box-shadow: 0px 0px 10px white;
-    border-radius: 10px;
+  margin-left: 5px;
+  border: 0px;
+  background-color: white;
+  font-size: 20px;
+  color: black;
+  padding: 5px;
+  box-shadow: 0px 0px 10px white;
+  border-radius: 10px;
 }
 #fButton:hover {
-    background-color: orange;
-    box-shadow: 0px 0px 10px orange;
+  background-color: orange;
+  box-shadow: 0px 0px 10px orange;
 }
 #fButton:active {
-    background-color: lightgreen;
-    box-shadow: 0px 0px 10px lightgreen;
+  background-color: lightgreen;
+  box-shadow: 0px 0px 10px lightgreen;
 }
 /* control style end */
 
@@ -205,91 +209,91 @@ ul > li {
 
 /* screen size */
 @media screen and (min-width: 200px), screen and (max-width: 0px) {
-    #home > button {
-        font-size: 10px;
-        margin: 5px 0px;
-    }
-    #control, #control > * > img, #control > img, #setting {
-        height: 50px;
-    }
-    #control > * > img, #control > img, #setting {
-        width: 50px;
-    }
+  #home > button {
+    font-size: 10px;
+    margin: 5px 0px;
+  }
+  #control, #control > * > img, #control > img, #setting {
+    height: 50px;
+  }
+  #control > * > img, #control > img, #setting {
+    width: 50px;
+  }
 }
 @media screen and (min-width: 317px) {
-    #home > button {
-        font-size: 20px;
-        margin: 10px 0px;
-    }
-    #control, #control > * > img, #control > img, #setting {
-        height: 60px;
-    }
-    #control > * > img, #control > img, #setting {
-        width: 60px;
-    }
+  #home > button {
+    font-size: 20px;
+    margin: 10px 0px;
+  }
+  #control, #control > * > img, #control > img, #setting {
+    height: 60px;
+  }
+  #control > * > img, #control > img, #setting {
+    width: 60px;
+  }
 }
 @media screen and (min-width: 373px) {
-    #home > button {
-        font-size: 30px;
-        margin: 20px 0px;
-    }
-    #control, #control > * > img, #control > img, #setting {
-        height: 70px;
-    }
-    #control > * > img, #control > img, #setting {
-        width: 70px;
-    }
+  #home > button {
+    font-size: 30px;
+    margin: 20px 0px;
+  }
+  #control, #control > * > img, #control > img, #setting {
+    height: 70px;
+  }
+  #control > * > img, #control > img, #setting {
+    width: 70px;
+  }
 }
 @media screen and (min-width: 645px) {
-    #home > button {
-        font-size: 50px;
-        margin: 20px 0px;
-    }
-    #control, #control > * > img, #control > img, #setting {
-        height: 80px;
-    }
-    #control > * > img, #control > img, #setting {
-        width: 80px;
-    }
+  #home > button {
+    font-size: 50px;
+    margin: 20px 0px;
+  }
+  #control, #control > * > img, #control > img, #setting {
+    height: 80px;
+  }
+  #control > * > img, #control > img, #setting {
+    width: 80px;
+  }
 }
 /* macOS Windows and Linux screen end */
 
 /* dark color */
 @media (prefers-color-scheme: dark) {
-    #home {
-        background-color: rgb(50,50,50);
-    }
+  #home {
+    background-color: rgb(50,50,50);
+  }
 
-    #home > button {
-        color: white;
-    }
-    #home > button:hover {
-        background-color: rgba(0, 0, 0, 0.2);
-    }
-    #home > button:active {
-        color: white;
-        background-color: rgba(0, 0, 0, 0.4);
-    }
+  #home > button {
+    color: white;
+  }
+  #home > button:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  #home > button:active {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
 
-    #control {
-        background-color: black;
-    }
+  #control {
+    background-color: black;
+  }
 
-    body {
-        background-color: black;
-    }
+  body {
+    background-color: black;
+  }
 
-    #setting[class="settingStart"] {
-        background-color: rgba(30,30,30,0.5);
-    }
-    #setting[class="settingStart"] > div > button {
-        color: white;
-    }
-    #setting[class="settingStart"] > div > button:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-    }
-    #setting[class="settingStart"] > div > button:active {
-        background-color: rgba(255, 255, 255, 0.4);
-    }
+  #setting[class="settingStart"] {
+    background-color: rgba(30,30,30,0.5);
+  }
+  #setting[class="settingStart"] > div > button {
+    color: white;
+  }
+  #setting[class="settingStart"] > div > button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  #setting[class="settingStart"] > div > button:active {
+    background-color: rgba(255, 255, 255, 0.4);
+  }
 }
 /* screen size end */
